--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "ortix",
-    "version": "1.3.0",
-    "description": "Ortix - React Next Multipurpose Landing Page Template",
+    "name": "construtec",
+    "version": "1.1.0",
+    "description": "landing page Construtec",
     "main": "index.js",
     "dependencies": {
         "axios": "^0.20.0",
@@ -23,6 +23,6 @@
         "build": "next build",
         "start": "next start"
     },
-    "author": "HiBootstrap.com",
+    "author": "Carlos Yaco",
     "license": "ISC"
 }
