--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^6.15.8",
         "react-modal-video": "^1.2.8",
-        "react-owl-carousel3": "^2.2.5",
+        "react-slick": "^0.29.0",
         "sass": "^1.44.0",
         "sweetalert2": "^10.16.9",
         "sweetalert2-react-content": "^3.3.3"
