--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "construtec",
-    "version": "1.3.0",
+    "version": "1.4.0",
     "description": "Construtec landing page",
     "main": "index.js",
     "dependencies": {
@@ -15,9 +15,7 @@
         "react-hook-form": "^6.15.8",
         "react-modal-video": "^1.2.8",
         "react-slick": "^0.29.0",
-        "sass": "^1.44.0",
-        "sweetalert2": "^10.16.9",
-        "sweetalert2-react-content": "^3.3.3"
+        "sass": "^1.44.0"
     },
     "scripts": {
         "dev": "next dev",
