--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Construtec landing page",
     "main": "index.js",
     "dependencies": {
+        "@hotjar/browser": "^1.0.9",
         "axios": "^0.20.0",
         "next": "^12.0.4",
         "nodemailer": "^6.7.2",
